# mongo-python-driver

./: .codecov.yml  .coveragerc  .deepsource.toml  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  ElementTree.py  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PYTHON-5676-scope.md  QUICK_START.md  README  README.md  README.rst  RELEASE.md  RELEASE.rst  RUST_DECISION_MATRIX.md  RUST_SPIKE_README.md  RUST_SPIKE_RESULTS.md  SANS_IO_SPIKE.md  THIRD-PARTY-NOTICES  _setup.py  appveyor.yml  benchmark_rust_vs_c.py  bson.py  build_rust.py  cdecimal_test.py  check_stuff.sh  collection.py  connection.py  cursor.py  cursor_manager.py  (+48 more)
.evergreen/: README.md  all.patch  build-mac.sh  build-manylinux-internal.sh  build-manylinux.sh  build-wheels.sh  build-windows.sh  check-c-extensions.sh  cleanup-tests.sh  combine-coverage.sh  config.yml  configure-expansions.sh  fetch-aws-vault-secrets.sh  hatch.sh  install-dependencies.sh  just.sh  perf.yml  release.sh  remove-unimplemented-tests.sh  resync-specs.sh  run-atlas-tests.sh  run-azurekms-fail-test.sh  run-azurekms-test.sh  run-cdecimal-tests.sh  run-datalake-tests.sh  run-deployed-lambda-aws-tests.sh  run-doctests.sh  run-encryption-tests-local.sh  run-encryption-tests.sh  run-enterprise-auth-tests.sh  run-gcpkms-test.sh  run-import-time-test.sh  run-mockupdb-tests.sh  run-mod-wsgi-tests.sh  run-mongodb-aws-ecs-test.sh  run-mongodb-aws-test.sh  run-mongodb-fle-auto.sh  run-mongodb-fle-azure-auto.sh  run-mongodb-fle-gcp-auto.sh  run-mongodb-oidc-remote-test.sh  (+26 more)
.evergreen/atlas-testing/: install-driver.sh  workload-executor.py  workload-executor.sh  write-driver-expansion.sh
.evergreen/generated_configs/: functions.yml  tasks.yml  variants.yml
.evergreen/patch/: PYTHON-4918.patch  diff.patch
.evergreen/scripts/: archive-mongodb-logs.sh  bootstrap-mongo-orchestration.sh  check-import-time.sh  (+66 more)
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  reviewers.txt  zizmor.yml
CodeBoarding/: Authentication.md  BulkWrite.md  Collection.md  ConnectionPool.md  Cursor.md  Database.md  MongoClient.md  Topology.md  on_boarding.md
binder/: PORT  bootstrap.py  environment.yml  init  mongo  postBuild  start
bson/: __init__.py  __init__.pyi  _cbson.h  _cbsonmodule.c  _cbsonmodule.h  _helpers.py  _rust_bson.py  binary.py  binary.pyi  bson-endian.h  bson_writer.py  bsonint64.py  buffer.c  buffer.h  code.py  code.pyi  codec_options.py  codec_options.pyi  codecs.py  compat.py  custom_bson.py  datetime_ms.py  dbref.py  dbref.pyi  decimal128.py  decimal128.pyi  encoding_helpers.c  encoding_helpers.h  errors.py  errors.pyi  int64.py  int64.pyi  json_util.py  json_util.pyi  max_key.py  max_key.pyi  min_key.py  min_key.pyi  objectid.py  objectid.pyi  (+18 more)
bson/_rbson/: Cargo.toml  README.md  build.sh
bson/_rbson/src/: decode.rs  encode.rs  errors.rs  lib.rs  types.rs  utils.rs
debian/: changelog  control  copyright  python-mongodb-doc.dirs  python-mongodb-doc.doc-base  python-mongodb-doc.install  python-mongodb.install  rules  watch
doc/: Makefile  async-tutorial.rst  atlas.rst  changelog.md  changelog.rst  common-issues.rst  compatibility-policy.rst  conf.py  contributors.rst  docs-requirements.txt  faq.rst  index.rst  installation.rst  logging.rst  make.bat  migrate-to-pymongo3.rst  migrate-to-pymongo4.rst  mongo_extensions.py  python3.rst  tools.rst  tutorial.rst  tutorial_spanish.rst
examples/: auto_reference.py  custom_type.py  gridfs_demo.py  quick_tour.py  simple_demo.py
gridfs/: __init__.py  errors.py  grid_file.py  grid_file_shared.py
integration_tests/: README.md  run.sh  test_uv_loop.py
mockuptests/: pyvenv.cfg
notebooks/: MongoClient.ipynb  basic_aggregation.ipynb  cursor_methods_agg_equivalents.ipynb  deletes.ipynb  error_handling.ipynb  index.ipynb  your_first_read.ipynb  your_first_write.ipynb
pymongo/: CODEOWNERS  __init__.py  __init__.pyi  _asyncio_executor.py  _asyncio_lock.py  _asyncio_task.py  _azure_helpers.py  _cbsonmodule.c  _client_bulk_shared.py  _cmessagemodule.c  _csot.py  _gcp_helpers.py  _ipaddress.py  _lazy_import.py  _op_id.py  _otel.py  _psl.py  _sdam_error.py  _sdam_monitor.py  _sdam_selection.py  _telemetry.py  _version.py  aggregation.py  auth.py  auth.pyi  auth_aws.py  auth_oidc.py  auth_oidc_shared.py  auth_shared.py  azure_helpers.py  binary.py  bson.py  bulk.py  bulk.pyi  bulk_shared.py  change_stream.py  change_stream.pyi  client_bulk_shared.py  client_options.py  client_options.pyi  (+148 more)
requirements/: aws.txt  docs.txt  encryption.txt  gssapi.txt  numpy.txt  ocsp.txt  opentelemetry.txt  proxy.txt  snappy.txt  test.txt  typing.txt  zstd.txt
rust/: Cargo.toml  README.md
rust/src/: lib.rs
test/: __init__.py  barrier.py  conftest.py  crud_v2_format.py  gridfs15.py  gridfs16.py  grpc_example.py  helpers.py  helpers_shared.py  pymongo_mocks.py  pytest_conf.py  qcheck.py  shared.py  sigstop_sigcont.py  test_auth.py  test_auth_oidc.py  test_auth_spec.py  test_azure_helpers.py  test_backpressure.py  test_binary.py  test_bson.py  test_bson_binary_vector.py  test_bson_corpus.py  test_bson_custom_types.py  test_bson_writer.py  test_bulk.py  test_causal_consistency.py  test_change_stream.py  test_client.py  test_client_backpressure.py  test_client_bulk_write.py  test_client_context.py  test_client_metadata.py  test_client_new.py  test_cluster.py  test_cluster_spec.py  test_cmap.py  test_code.py  test_collation.py  test_collection.py  (+144 more)
tools/: README.rst  auto_reconnect_test.py  benchmark.py  benchmark1.py  blocking_test.py  bson_benchmark.py  clean.py  compare_import_time.py  convert_test_to_async.py  dispatcher  driver_tests.py  ensure_future_annotations_import.py  fail_if_no_c.py  generate_flamegraph.py  generate_flamegraph.sh  generate_sbom_requirements.py  mongodb_benchmark_tools.py  ocsptest.py  run-encryption-tests-local.sh  synchro.py  synchro.sh  test_synchro.py  test_uv_loop.py  update-locks.sh  validate  validate.py
(+1479 files in other folders)
