[package]
name = "bson-rbson"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rbson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
bson = "2.13"
serde = "1.0"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
